# madex

./: .claudeignore  .coverage  .gitignore  .gitlab-ci.yml  README.md  cov.xml  demo_refactored_modules.py  dockerfile  environment.yml  experiments.ipynb  experiments_secure.ipynb  main.py  package-list.txt  pyproject.toml  sandbox.py  sandbox_extended.py  test_madex.py  validation_tests.py
.claude/: settings.local.json
.qoder/quests/: bootstrap-sensitivity-common.md
archive/: sandbox.py
archive/bootstrap/: README.md  bootstrap.py
archive/extended_scripts/: sandbox_extended.py
archive/extended_scripts/extended_bootstrap/: bootstrap_extended.py
archive/extended_scripts/extended_narrative/: narrative_extended.py  narrative_results.md
archive/extended_scripts/extended_sensitivity/: sensitivity_extended.py
archive/sensitivity/: narrative_demo.py
bootstrap/: bootstrap.py
extended_bootstrap/: bootstrap_extended.py  bootstrap_results.md
extended_narrative/: narrative_extended.py  narrative_results.md
extended_outcome/: extended_scenario_results.xlsx  extended_scenarios.xlsx  ~$extended_scenario_results.xlsx
extended_sensitivity/: sensitivity_extended.py  sensitivity_results.md
notebooks/: cega.py  experiments.ipynb  experiments_old.ipynb  fuzzy_glucose.ipynb  fuzzy_tests.ipynb
openspec/: project.md
openspec/specs/cli-analysis/: spec.md
openspec/specs/clinical-data/: spec.md
sensitivity/: README.md  sensitivity_analysis.py
sp_diab/: cega.py  madex.py
src/new_metric/: __init__.py  cega.py  madex.py
tests/: test_cega.py  test_madex.py
(+29 files in other folders)
