[project]
name = "new-metric"
version = "0.1.0"
description = "Mean Adjusted Exponent Error (MADE) - A custom adaptive error function for machine learning evaluation"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "matplotlib",
    "scikit-learn",
    "pandas",
    "ipython",
    "jupyter",
    "openpyxl",
    "scikit-fuzzy",
    "networkx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "flake8",
    "autopep8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/new_metric"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml:cov.xml",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    "*.egg-info",
]
